--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,1 +1,23 @@
 @use "./reset.scss";
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 1.5em;
+  padding: 0.5em;
+}
+
+body {
+  margin: auto;
+  max-width: 600px;
+}
+
+#source {
+  width: 100%;
+  resize: vertical;
+  min-height: 3em;
+  font-family: sans-serif;
+  font-size: inherit;
+}
