--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -19,7 +19,7 @@ body {
   width: 100%;
   resize: vertical;
   min-height: 3em;
-  font-family: sans-serif;
+  font-family: u0400;
   font-size: inherit;
 }
 
