--- a/src/style/vkb.scss
+++ b/src/style/vkb.scss
@@ -1,4 +1,5 @@
 @use "./ufont.scss";
+@use "./theme.scss";
 
 button {
   font-family: u0400;
@@ -41,22 +42,22 @@ fieldset > * {
 }
 
 button {
-  background: #f1d360;
+  background: theme.$color-primary;
   $size: 4ch;
   width: $size;
   height: $size;
-  border: 1px solid #0086be;
+  border: 1px solid theme.$color-accent;
   border-radius: 3px;
 }
 
 .sofitGroup {
   :first-child {
-    border-inline-start: 1px solid #0086be;
+    border-inline-start: 1px solid theme.$color-accent;
     border-start-end-radius: 0;
     border-end-end-radius: 0;
   }
   :last-child {
-    border-inline-end: 1px solid #0086be;
+    border-inline-end: 1px solid theme.$color-accent;
     border-start-start-radius: 0;
     border-end-start-radius: 0;
   }
@@ -66,6 +67,6 @@ button {
   }
 
   :first-child {
-    border-inline-end: dashed 1px #0086be77;
+    border-inline-end: dashed 1px rgba(theme.$color-accent, 0.5);
   }
 }
