--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -36,3 +36,7 @@ body {
   margin-top: 1em;
   display: block;
 }
+
+h1 {
+  font-family: "Noto Sans Phoenician", "Noto Rashi Hebrew", "Noto Sans Display";
+}
