--- a/src/style/vkb.scss
+++ b/src/style/vkb.scss
@@ -42,6 +42,8 @@ fieldset > * {
   content: "א";
 }
 
+$button-border-radius: 3px;
+
 button {
   background: theme.$color-primary;
   &:hover {
@@ -52,26 +54,28 @@ button {
   width: $size;
   height: $size;
   border: 1px solid theme.$color-accent;
-  border-radius: 3px;
+  border-radius: $button-border-radius;
 }
 
-.sofitGroup {
-  :first-child {
-    border-inline-start: 1px solid theme.$color-accent;
-    border-start-end-radius: 0;
-    border-end-end-radius: 0;
-  }
-  :last-child {
-    border-inline-end: 1px solid theme.$color-accent;
-    border-start-start-radius: 0;
-    border-end-start-radius: 0;
-  }
+.buttonGroup {
   button {
     border-left: 0;
     border-right: 0;
+    border-radius: 0;
   }
 
-  :first-child {
+  button:not(:last-child) {
     border-inline-end: dashed 1px rgba(theme.$color-accent, 0.5);
+  }
+
+  button:first-child {
+    border-inline-start: 1px solid theme.$color-accent;
+    border-start-start-radius: $button-border-radius;
+    border-end-start-radius: $button-border-radius;
+  }
+  button:last-child {
+    border-inline-end: 1px solid theme.$color-accent;
+    border-start-end-radius: $button-border-radius;
+    border-end-end-radius: $button-border-radius;
   }
 }
